--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <meta http-equiv="Refresh" content="0; url='http://danielszelogowski.com/'" />
 </head>
 <body>
-  Hello world!
+  <a href="http://danielszelogowski.com/">Click here to be redicted manually</a>
 </body>
 </html>
