--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Refresh" content="0; url='http://danielszelogowski.com/'" />
+  <title>Daniel Szelogowski :: Home</title>
+  <meta http-equiv="Refresh" content="0; url='http://danielszelogowski.com/'" />
 </head>
 <body>
   <a href="http://danielszelogowski.com/">Click here to be redicted manually</a>
