--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <meta http-equiv="Refresh" content="0; url='http://danielszelogowski.com/'" />
 </head>
 <body>
-  <a href="http://danielszelogowski.com/">Click here to be redicted manually...</a>
+  <a href="http://danielszelogowski.com/">Click here to be redicted manually</a>
 </body>
 </html>
