--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <a href="http://danielszelogowski.com/">Click here to be redicted manually</a>
+  <!-- This is a comment -->
 </body>
 </html>
