--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Daniel Szelogowski :: Home</title>
-  <meta http-equiv="Refresh" content="0; url='http://danielszelogowski.com/'" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-  <a href="http://danielszelogowski.com/">Click here to be redicted manually</a>
-  <!-- This is a comment -->
+  Hello world
+  <script src="script.js"></script>
+
+ <!--
+  This script places a badge on your repl's full-browser view back to your repl's cover
+  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
+  teal, blue, blurple, magenta, pink!
+  -->
+  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
 </body>
+
 </html>
