--- a/spc/index.html
+++ b/spc/index.html
@@ -7,5 +7,18 @@
   </head>
   <body>
     <p>Hello!</p>
+    <h1>Submit Code</h1>
+    <form id="subcode" method="POST">
+      <label for="teamid">Team ID: </label>
+      <input type="number" id="teamid" name="teamid"/>
+
+      <label for="outpt">Program output: </label>
+      <input type="text" id="outpt" name="outpt" />
+
+      <input type="submit" value="Submit">
+    </form>
+
+    <h1>Scoreboard:</h1>
+    <pre id="scrbd"></pre>
   </body>
 </html>
