--- a/spc/index.html
+++ b/spc/index.html
@@ -6,7 +6,7 @@
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   </head>
   <body>
-    <button onclick="">Hide Submission Form</button>
+    <button onclick="hideSubmit();">Hide Submission Form</button>
     <h1>Submit Code</h1>
     <form id="subcode" method="POST">
       <label for="teamid">Team ID: </label>
