--- a/spc/index.html
+++ b/spc/index.html
@@ -7,23 +7,25 @@
   </head>
   <body>
     <button onclick="hideSubmit();">Hide Submission Form</button>
-    <h1>Submit Code</h1>
-    <form id="subcode" method="POST">
-      <label for="teamid">Team ID: </label>
-      <input type="number" id="teamid" name="teamid"/>
+    <div id="subform">
+      <h1>Submit Code</h1>
+      <form id="subcode" method="POST">
+        <label for="teamid">Team ID: </label>
+        <input type="number" id="teamid" name="teamid"/>
 
-      <label for="outpt">Program output: </label>
-      <input type="text" id="outpt" name="outpt" />
+        <label for="outpt">Program output: </label>
+        <input type="text" id="outpt" name="outpt" />
 
-      <input type="submit" value="Submit">
-    </form>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
 
     <h1>Scoreboard:</h1>
     <pre id="scrbd"></pre>
   </body>
   <script>
     function hideSubmit() {
-      var x = document.getElementById("subcode");
+      var x = document.getElementById("subform");
       if (x.style.display === "none") {
         x.style.display = "block";
       } else {
