--- a/spc/index.html
+++ b/spc/index.html
@@ -16,7 +16,7 @@
         <label for="output">Program output: </label>
         <input type="text" id="output" name="output" />
 
-        <input type="submit" value="Submit" pys-onClick="dosubmit" >
+        <input type="submit" value="Submit" id="sbutton" pys-onClick="dosubmit" >
         <p id="err"></p>
       </form>
     </div>
