--- a/spc/index.html
+++ b/spc/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Daniel Szelogowski :: Home</title>
-  <meta http-equiv="Refresh" content="0; url='http://danielszelogowski.com/'" />
+  <meta http-equiv="Refresh" content="0; url='http://danielszelogowski.com/spc'" />
 </head>
 <body>
   <a href="http://danielszelogowski.com/spc">Click here to be redicted manually</a>
