--- a/survey/index.html
+++ b/survey/index.html
@@ -4,9 +4,22 @@
     <title>AI Choral Music Generation Survey Code</title>
   </head>
   <body>
+    <p id="out"></p>
     <script>
       let randomNumber = Math.floor(Math.random() * 1e9).toString().padStart(9, '0');
-      document.writeln(`AIT-${randomNumber}-CMG`);
+      document.getElementById('out').innerHTML = (`Thank you for taking part in this survey!<br/>If you're curious, samples 1, 2, and 4 were AI-generated; only 3 and 5 were real (human) compositions. You can listen to them again below.<br/><br/>Here is your unique survey code (for Amazon MTurk users):<br/><b>AIT-${randomNumber}-CMG</b>`);      
     </script>
+
+    <hr/>
+    <h3>Question 1 (AI):</h3>
+    <audio controls src="question_1.mp3"></audio>
+    <h3>Question 2 (AI):</h3>
+    <audio controls src="question_2.mp3"></audio>
+    <h3>Question 3 (Human):</h3>
+    <audio controls src="question_3.mp3"></audio>
+    <h3>Question 4 (AI):</h3>
+    <audio controls src="question_4.mp3"></audio>
+    <h3>Question 5 (Human):</h3>
+    <audio controls src="question_5.mp3"></audio>
   </body>
 </html>
