--- a/survey/index.html
+++ b/survey/index.html
@@ -11,7 +11,7 @@
       document.getElementById('out').innerHTML = (`Thank you for taking part in this survey!<br/>If you're curious, samples 1, 2, and 4 were AI-generated; only 3 and 5 were real (human) compositions. You can listen to them again and see the original survey below.<br/><br/>Here is your unique survey code (for Amazon MTurk users):<br/><b>AIT-${randomNumber}-CMG</b>`);      
     </script>
     <hr/>
-    <h1>Original Survey Post:</h1>
+    <h3>Original Survey Post:</h3>
     <p>This survey will present a musical Turing test for a new (W.I.P.) generative AI model for 4-part (SATB) choral music as part of a Ph.D. dissertation evaluation. You will be presented with 5 audio samples rendered from MIDI using a choir soundfont; some of them will be AI-generated, the others will be human-composed (i.e., compositions from real composers), and you simply need to respond with which one you believe the piece was composed by. The samples will be ~30-60 seconds long and may be from any part of the original MIDI, not necessarily the beginning.
        To prevent potential bias, please listen to this brief audio sample (of a real piece of choral music) rendered with the soundfont so you know what to expect all 5 samples to sound like. Then, choose "Yes" to proceed if you have read and understand these terms.
     </p>
@@ -26,6 +26,7 @@
       <li>Human - Mostly believe</li>
       <li>Human - Strongly believe</li>
     </ul>
+    <hr/>
     <h3>Question 1 (AI):</h3>
     <audio controls src="question_1.mp3"></audio>
     <h3>Question 2 (AI):</h3>
@@ -37,12 +38,12 @@
     <h3>Question 5 (Human):</h3>
     <audio controls src="question_5.mp3"></audio>
     <hr/>
-    <p>The last question asked users to describe their current level of musicianship/musica ability:</p>
-    <ol>
+    <p>The last question asked users to describe their current level of musicianship/musical ability:</p>
+    <ul>
       <li>Music Teacher/professional (classically trained, undergraduate degree or higher)</li>
       <li>Music student (college-level or equivalent experience, including AP)</li>
       <li>Amateur musician (hobbyist, some background in composition/theory)</li>
       <li>Music listener/enjoyer (little or no experience)</li>
-    </ol>
+    </ul>
   </body>
 </html>
