--- a/survey/index.html
+++ b/survey/index.html
@@ -8,7 +8,6 @@
       background-color: black;
       color: transparent;
       cursor: pointer;
-      /* padding: 5px; */
       display: inline-block;
       text-align: center;
     }
@@ -34,6 +33,8 @@
       let randomNumber = Math.floor(Math.random() * 1e9).toString().padStart(9, '0');
       document.getElementById('out').innerHTML = (`Thank you for taking part in this survey!<br/>If you're curious, samples <span class="spoiler">1, 2, and 4</span> were AI-generated; only samples <span class="spoiler">3 and 5</span> were real (human) compositions. You can listen to them again and see the original survey below.<br/><br/>Here is your unique survey code (for Amazon MTurk users):<br/><b>AIT-${randomNumber}-CMG</b>`);      
     </script>
+    <p>Hover your mouse over the <b>*Spoiler*</b> sections to reveal the answers to who composed which samples, or click the button below to reveal all.</p>
+    <button onclick="document.querySelectorAll('.spoiler').forEach(e => e.className = '');">Reveal spoilers</button>
     <hr/>
     <h3>Original Survey Post:</h3>
     <p>This survey will present a musical Turing test for a new (W.I.P.) generative AI model for 4-part (SATB) choral music as part of a Ph.D. dissertation evaluation. You will be presented with 5 audio samples rendered from MIDI using a choir soundfont; some of them will be AI-generated, the others will be human-composed (i.e., compositions from real composers), and you simply need to respond with which one you believe the piece was composed by. The samples will be ~30-60 seconds long and may be from any part of the original MIDI, not necessarily the beginning.
