--- a/maintenance.html
+++ b/maintenance.html
@@ -1,12 +1,13 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Daniel Szelogowski :: Maintenance</title>
+  <style>pre { display: inline; }</style>
 </head>
 <body>
-  <h1>Down for Maintenance</h1>
+  <h1>Down for Server Maintenance</h1>
   <p>If you were redirected to this page, <pre>danielszelogowski.com</pre>, <pre>codingvoyage.com</pre>, and <pre>actesco.org</pre> are currently under maintenance and should be back up soon. Thank you!</p>
 </body>
 </html>
