--- a/maintenance.html
+++ b/maintenance.html
@@ -8,6 +8,13 @@
 </head>
 <body>
   <h1>Down for Server Maintenance</h1>
-  <p>If you were redirected to this page, <pre>danielszelogowski.com</pre>, <pre>codingvoyage.com</pre>, and <pre>actesco.org</pre> are currently under maintenance and should be back up soon. Thank you!</p>
+  <p>If you were redirected to this page, <pre>danielszelogowski.com</pre>, <pre>codingvoyage.com</pre>, and <pre>actesco.org</pre> 
+     are currently under maintenance and should be back up soon. In the meantime, you can find my portfolio (and CV) through the following social links:</p>
+  <ul>
+    <li><a href="https://www.linkedin.com/in/danielszelogowski/">LinkedIn</a></li>
+    <li><a href="https://github.com/danielathome19">GitHub</a></li>
+    <li><a href="https://orcid.org/0000-0002-0350-5771">ORCiD</a></li>
+  </ul>
+  <p>Thank you!</p>
 </body>
 </html>
