--- a/maintenance.html
+++ b/maintenance.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Daniel Szelogowski :: Maintenance</title>
-  <style>pre { display: inline; }</style>
+  <title>Daniel Szelogowski :: Under Maintenance</title>
+  <style>p a { text-decoration: none; color: black; font-family: monospace, monospace; }</style>
 </head>
 <body>
   <h1>Down for Server Maintenance</h1>
-  <p>If you were redirected to this page, <pre>danielszelogowski.com</pre>, <pre>codingvoyage.com</pre>, and <pre>actesco.org</pre> 
+  <p>If you were redirected to this page, <a href="https://danielszelogowski.com">danielszelogowski.com</a>, <a href="https://codingvoyage.com">codingvoyage.com</a>, and <a href="https://actesco.org">actesco.org</a> 
      are currently under maintenance and should be back up soon. In the meantime, you can find my portfolio (and CV) through the following social links:</p>
   <ul>
     <li><a href="https://www.linkedin.com/in/danielszelogowski/">LinkedIn</a></li>
